--- a/Toko-Onlen/index.html
+++ b/Toko-Onlen/index.html
@@ -10,52 +10,191 @@
 
 <body>
     <div class="content">
-        <div class="header"></div>
-        <nav-left>  </nav-left>
-        <nav-right> </nav-right>
+        <div class="header">
+            <div class="logo">
+                <img src="images/Warung.png" alt="">
+            </div>
+            <div class="nav-left">
+                <ul>
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">Produk</a></li>
+                    <li><a href="#">Info</a></li>
+                    <li><a href="#">Sitemap</a></li>
+                    <li><a href="#">Payment</a></li>
+                </ul>
+            </div>
+            <div class="nav-right">
+                <ul>
+                    <li><a href="#">Register</a></li>
+                    <li><a href="#">SignIn</a></li>
+                </ul>
+            </div>
+        </div>
         <div class="main">
-            <div class="main-left"></div>
-            <div class="main-right"></div>
+            <div class="main-left">
+                <img src="images/tab.png" alt="">
+            </div>
+            <div class="main-right">
+                <h2>Tablet Murah Meriah</h2>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quae earum inventore at ipsum numquam
+                    deserunt eum tempora nulla.</p>
+            </div>
         </div>
         <div class="display">
-            <div class="display-content"></div>
+            <div class="display-content">
+                <h2>Produk Murah Meriah</h2>
+            </div>
         </div>
         <div class="produk">
-            <div class="produk-content"></div>
-            <div class="produk-content"></div>
-            <div class="produk-content"></div>
+            <div class="produk-content">
+                <div class="image">
+                    <img src="images/hp.png" alt="">
+                </div>
+                <div class="titel">
+                    <h2>HP Murah</h2>
+                </div>
+                <div class="deskripsi">
+                    <p>Lorem Ipsum entah entah boi saya haris iuora nintendo nidoking.</p>
+                </div>
+                <div class="harga">
+                    <h2>Rp 2000</h2>
+                </div>
+            </div>
+            <div class="produk-content">
+                <div class="image">
+                    <img src="images/leppy.png" alt="">
+                </div>
+                <div class="titel">
+                    <h2>HP Murah</h2>
+                </div>
+                <div class="deskripsi">
+                    <p>Lorem Ipsum entah entah boi saya haris iuora nintendo nidoking.</p>
+                </div>
+                <div class="harga">
+                    <h2>Rp 2000</h2>
+                </div>
+            </div>
+            <div class="produk-content">
+                <div class="image">
+                    <img src="images/tab.png" alt="">
+                </div>
+                <div class="titel">
+                    <h2>HP Murah</h2>
+                </div>
+                <div class="deskripsi">
+                    <p>Lorem Ipsum entah entah boi saya haris iuora nintendo nidoking.</p>
+                </div>
+                <div class="harga">
+                    <h2>Rp 2000</h2>
+                </div>
+            </div>
+            <div class="produk-content">
+                <div class="image">
+                    <img src="images/tv.png" alt="">
+                </div>
+                <div class="titel">
+                    <h2>HP Murah</h2>
+                </div>
+                <div class="deskripsi">
+                    <p>Lorem Ipsum entah entah boi saya haris iuora nintendo nidoking.</p>
+                </div>
+                <div class="harga">
+                    <h2>Rp 2000</h2>
+                </div>
+            </div>
         </div>
         <div class="info">
-            <div class="info-1">
-                info-1
+            <div class="info-content">
+                <div class="icon">
+                    <img src="images/phone.png" alt="">
+                </div>
+                <div class="info-isi">
+                    <h2>24/7 Free</h2>
+                    <p>layanan</p>
+                </div>
             </div>
-            <div class="info-2">
-                info-2
+            <div class="info-content">
+                <div class="icon">
+                    <img src="images/garansi.png" alt="">
+                </div>
+                <div class="info-isi">
+                    <h2>Garansi 100%</h2>
+                    <p>Uang Kembali</p>
+                </div>
             </div>
-            <div class="info-3">
-                info-3
+            <div class="info-content">
+                <div class="icon">
+                    <img src="images/box.png" alt="">
+                </div>
+                <div class="info-isi">
+                    <h2>Produk Resmi</h2>
+                    <p>Asli Pabrik</p>
+                </div>
             </div>
-            <div class="info-4">
-                info-4
+            <div class="info-content">
+                <div class="icon">
+                    <img src="images/star.png" alt="">
+                </div>
+                <div class="info-isi">
+                    <h2>Terpercaya</h2>
+                    <p>Sejak Dini</p>
+                </div>
             </div>
         </div>
         <div class="medsos">
-            <div class="medsos-1"></div>
-            <div class="medsos-2"></div>
-            <div class="medsos-3"></div>
+            <div class="medsos-isi">
+                <p>Silahkan Klik link media sosial kami di bawah ini atau silahkan kirim email anda untuk mengetahui
+                    promo di toko kami</p>
+            </div>
+            <div class="medsos-form">
+                <form action="">
+                    <input type="email" placeholder="email anda" name="" id="">
+                    <button>subscribe</button>
+                </form>
+            </div>
+            <div class="medsos-icon">
+                <img src="images/fb.png" alt="">
+                <img src="images/wa.png" alt="">
+                <img src="images/ig.png" alt="">
+                <img src="images/tweet.png" alt="">
+            </div>
         </div>
-        <div class="sitemap">
-            <div class="sitemap-left"></div>
-            <div class="sitemap-left"></div>
-            <div class="sitemap-left"></div>
-            <div class="sitemap-left"></div>
-            <div class="sitemap-left"></div>
-            <div class="sitemap-right"></div>
-        </div>
-        <div class="payment">
-            <div class="payment-left"></div>
-            <div class="payment-right"></div>
-        </div>
+        <footer>
+            <div class="identitas">
+                <h2>WARUNGPEDIA</h2>
+                <p>Sidoarjo Jawa TImur 61234</p>
+            </div>
+            <div class="sitemap">
+                <h2>Sitemap</h2>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Kontak</a></li>
+                <li><a href="#">Garansi</a></li>
+            </div>
+            <div class="payment">
+                <div class="logo-bank">
+                    <img src="images/bca.png" alt="">
+                </div>
+
+                <div class="bank">
+                    <h3>No Rek : 1234324324234</h3>
+                    <p>Bank BCA</p>
+                </div>
+                <div class="logo-bank">
+                    <img src="images/mandiri.png" alt="">
+                </div>
+                <div class="bank">
+                    <h3>No Rek : 1234324324234</h3>
+                    <p>Bank Mandiri</p>
+                </div>
+                <div class="logo-bank">
+                    <img src="images/bri.png" alt="">
+                </div>
+                <div class="bank">
+                    <h3>No Rek : 1234324324234</h3>
+                    <p>Bank BRI</p>
+                </div>
+            </div>
+        </footer>
     </div>
 </body>
 
